Esn directory (#20)
* set-up-branch

* branches_messed_up

* package-lock.json

* branch_fixed

* blocked by CORS policy

* user controller and dao created

* ESN Directory Done

* I wrote in the wrong pull request template

* Tests Modified

* Tests all failed, need help

* Auth Tests fixed

* remove package.json package.lock.json on root directory

* tests passed

* create constant for status

* fortget to commit frontend

* add getUserStatus in swagger.json

---------
