# Backend/src/user/user.entity.ts
@@ -10,4 +10,7 @@ export class ESNUser {
 
   @Column()
   password!: string;
+
+  @Column()
+  lastStatus!: string;
 }
